--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
         <section class="content-section text-white">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-                <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
-                <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
+                <a class="btn btn-xl btn-light me-4" href="https://quiz-appz.herokuapp.com">Click Me!</a>
+                
             </div>
         </section>
 
