--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
             </div>
         </section>
 <!-- Portfolio-->
-<!-- <section class="content-section" id="portfolio">
+<section class="content-section" id="portfolio">
     <div class="container px-4 px-lg-5">
         <div class="content-section-heading text-center">
             <h2 class="mb-5">Awesome Projects</h2>
@@ -76,14 +76,14 @@
             </div>
         </div>
     </div>
-</section> -->
+</section> 
 
 
 
 <!-- ####CAROUSEL PROBA DA VIDIS KAKO IZGLEDA!!!! -->
 
 
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<!-- <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
 <section class="content-section" id="portfolio">
@@ -162,7 +162,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
-</div>
+</div> -->
 
 
 
