--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,35 +2,40 @@
 
 {% block content %}
 
-<!-- Wrapper container -->
-<div class="container py-4">
+
+<!-- <div class="container py-4">
   <h1>Send me a message :)</h1>
 
-  <!-- Bootstrap 5 starter form -->
-  <form id="contactForm" action="https://formsubmit.co/21961a656339c3cf6b28f9d3d31593c1 " method="POST" enctype="multipart/form-data">
+ Bootstrap 5 starter form -->
+ <!-- <form id="contactForm" action="https://formsubmit.co/21961a656339c3cf6b28f9d3d31593c1 " method="POST" enctype="multipart/form-data"> -->
 
-    <!-- Name input -->
-    <div class="mb-3 contact">
-      <input class="form-control" id="name" name="name" type="text" placeholder="Name" />
+<div class="container mt-5">
+  <h1>Contact Me</h1>
+  <form class="row g-3" action="https://formsubmit.co/21961a656339c3cf6b28f9d3d31593c1" method="POST" enctype="multipart/form-data" >
+    <div class="col-md-6">
+      <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" required>
     </div>
-
-    <!-- Email address input -->
-    <div class="mb-3 contact">
-      <input class="form-control" id="emailAddress" name="email" type="email" placeholder="Email Address" />
+    <div class="col-md-6">
+      <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" required>
     </div>
-
-    <!-- Message input -->
-    <div class="mb-3 contact">
-      <textarea class="form-control" id="message" name="message" type="text" placeholder="Message" style="height: 10rem;"></textarea>
+    <div class="col-md-6">
+      <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
     </div>
-
-    <!-- Form submit button -->
-    <div class="d-grid">
-      <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+    <div class="col-md-12">
+      <textarea class="form-control" name="text" id="text" cols="10" rows="5"></textarea>
+    </div>
+    <div class="col-md-12">   
+      <button type="submit" class="btn btn-primary">Submit</button>
     </div>
 
   </form>
 
 </div>
+
+
+
+
+
+
 
 {% endblock content%}
