--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11304,7 +11304,7 @@ html {
 }
 
 #portfolio{
-  background-color: #e9812f;
+  background-color: #AA8B56;
 }
 
 /* .content-section-a {
@@ -11315,7 +11315,7 @@ html {
 
 
 .content-section {
-  background-color: #473437;
+  background-color: #4E6C50;
   padding-top: 7.5rem;
   padding-bottom: 7.5rem;
 }
@@ -11593,3 +11593,4 @@ footer.footer .social-link:hover {
   font-size: 2.25rem;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
+
