--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,13 +3,8 @@
 {% block content %}
 
 
-<!-- <div class="container py-4">
-  <h1>Send me a message :)</h1>
 
- Bootstrap 5 starter form -->
- <!-- <form id="contactForm" action="https://formsubmit.co/21961a656339c3cf6b28f9d3d31593c1 " method="POST" enctype="multipart/form-data"> -->
-
-<div class="container mt-5">
+<div class="container mt-5" style="margin:auto; width: 50%; padding: 10px;">
   <h1>Contact Me</h1>
   <form class="row g-3" action="https://formsubmit.co/21961a656339c3cf6b28f9d3d31593c1" method="POST" enctype="multipart/form-data" >
     <div class="col-md-6">
@@ -18,7 +13,7 @@
     <div class="col-md-6">
       <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name" required>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-12">
       <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
     </div>
     <div class="col-md-12">
