--- a/templates/index.html
+++ b/templates/index.html
@@ -16,10 +16,10 @@
 
 
         <!-- Call to Action-->
-        <section class="content-section text-white">
+        <section class="content-section text-white align-items-center">
             <div class="container px-4 px-lg-5 text-center">
                 <h2 class="mb-4">The button below is impossible to resist...</h2>
-                <a class="btn btn-xl btn-light me-4" href="https://quiz-appz.herokuapp.com">Click Me!</a>
+                <a class="btn btn-outline-warning btn-xl" href="https://quiz-appz.herokuapp.com">Click Me!</a>
                 
             </div>
         </section>
