--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
         <!-- Navigation-->
-        <nav class="navbar navbar-light bg-dark fixed-top">
+        <nav class="navbar navbar-light bg-light fixed-top">
             <div class="container-fluid">
               <!-- <img src="static/assets/img/m (1).png"alt="" width="100" height="50"> -->
               <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
