adding data_port

--- a/templates/about.html
+++ b/templates/about.html
@@ -74,6 +74,18 @@
                         style="width:400px;height:400px;" alt="..." />
                 </a>
             </div>
+            <div class="col-lg-6">
+                <a class="portfolio-item" href="https://majalu.github.io/DATA_PORTFOLIO/">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <div class="h2">Data Analysis Projects</div>
+                            <p class="mb-0">Projects created during 100 Days of Python course.</p>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="https://source.unsplash.com/random/?bots" style="width:400px;height:400px;"
+                        alt="..." />
+                </a>
+            </div>
         </div>
     </div>
 </section> 
