add git und linked

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,10 +29,10 @@
     <div class="container px-4 px-lg-5">
         <ul class="list-inline mb-5">
             <li class="list-inline-item">
-                <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
+                <a class="social-link rounded-circle text-white mr-3" href="https://github.com/MajaLu"><i class="fa-brands fa-github"></i></a>
             </li>
             <li class="list-inline-item">
-                <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
+                <a class="social-link rounded-circle text-white" href="#!"><i class="fa-brands fa-linkedin"></i></a>
             </li>
         </ul>
         <p class="text-muted small mb-0">Copyright &copy; Maja's 2022</p>
