--- a/templates/about.html
+++ b/templates/about.html
@@ -23,7 +23,7 @@
 <section class="content-section" id="portfolio">
     <div class="container px-4 px-lg-5">
         <div class="content-section-heading text-center">
-            <h2 class="mb-5">Awesome Projects</h2>
+            <h2 class="mb-5">Some of my Awesome Projects</h2>
         </div>
         <div class="row gx-0">
             <div class="col-lg-6">
@@ -35,19 +35,7 @@
                         </div>
                     </div>
                     <img class="img-fluid" src="https://source.unsplash.com/random/?data"
-                        style="width:400px;height:400px;" alt="..." />
-                </a>
-            </div>
-            <div class="col-lg-6">
-                <a class="portfolio-item" href="#!">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <div class="h2">E-Commerce Web Site</div>
-                            <p class="mb-0">Tkinter GUI, Turtle.</p>
-                        </div>
-                    </div>
-                    <img class="img-fluid" src="https://source.unsplash.com/random/?games"
-                        style="width:400px;height:400px;" alt="..." />
+                        style="width:400px;height:300px;" alt="..." />
                 </a>
             </div>
             <div class="col-lg-6">
@@ -59,7 +47,7 @@
                         </div>
                     </div>
                     <img class="img-fluid" src="https://source.unsplash.com/random/?web"
-                        style="width:400px;height:400px;" alt="..." />
+                        style="width:400px;height:300px;" alt="..." />
                 </a>
             </div>
             <div class="col-lg-6">
@@ -71,7 +59,7 @@
                         </div>
                     </div>
                     <img class="img-fluid" src="https://source.unsplash.com/random/?bots"
-                        style="width:400px;height:400px;" alt="..." />
+                        style="width:400px;height:300px;" alt="..." />
                 </a>
             </div>
             <div class="col-lg-6">
@@ -82,7 +70,7 @@
                             <p class="mb-0">Projects created during 100 Days of Python course.</p>
                         </div>
                     </div>
-                    <img class="img-fluid" src="https://source.unsplash.com/random/?bots" style="width:400px;height:400px;"
+                    <img class="img-fluid" src="https://source.unsplash.com/random/?data" style="width:400px;height:300px;"
                         alt="..." />
                 </a>
             </div>
