--- a/templates/about.html
+++ b/templates/about.html
@@ -70,7 +70,7 @@
                             <p class="mb-0">Projects created during 100 Days of Python course.</p>
                         </div>
                     </div>
-                    <img class="img-fluid" src="https://source.unsplash.com/random/?data" style="width:400px;height:300px;"
+                    <img class="img-fluid" src="https://source.unsplash.com/random/?analysis" style="width:400px;height:300px;"
                         alt="..." />
                 </a>
             </div>
