--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
                             Experienced in HTML, CSS, Bootstrap, Flask, SQL, Pandas, Selenium, Beautiful Soup...
                             Completed 100 days of Python Course, below you can enjoy some of my projects :)
                         </p>
-                        <!-- <a class="btn btn-dark btn-xl" href="#services">What We Offer</a> -->
+                            <img src="static/assets\picture.jpg"style="width:400px;height:300px;" alt="">
                     </div>
                 </div>
             </div>
@@ -77,6 +77,7 @@
         </div>
     </div>
 </section> 
+
 
 
 
