--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Maja's Portfolio</title>
+        <title>Maja Glibo</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -26,6 +26,9 @@
 
         <!-- Footer-->
 <footer class="footer text-center">
+        <div class="container px-4 px-lg-5 text-center">
+            <h5>For more projects and info visit my Github page :)</h5>
+        </div>
     <div class="container px-4 px-lg-5">
         <ul class="list-inline mb-5">
             <li class="list-inline-item">
