--- a/templates/about.html
+++ b/templates/about.html
@@ -36,7 +36,7 @@
                             <p class="mb-0">Simple web app to make your life easier.</p>
                         </div>
                     </div>
-                    <img class="img-fluid" src="https://source.unsplash.com/random/?data"
+                    <img class="img-fluid" src="https://cdn.pixabay.com/photo/2022/12/09/03/51/big-data-7644530_640.jpg"
                         style="width:400px;height:300px;" alt="..." />
                 </a>
             </div>
